json file is linked to buttons and logs out true or false on click

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Coding Quiz</title>
   </head>
   <body>
+    <header>
+      <h1>Levi Kane's Coding Quiz Challenge Extravaganza!</h1>
+    </header>
+    <main>
+      <section id="gameScreen">
+        <h2>You ready to test that KNOWledge?!</h2>
+        <button id="startButton">START</button>
+      </section>
+      <section id="questionCard"></section>
+    </main>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
