linking true and false answers and displaying a final score page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
         <button id="startButton">START</button>
       </section>
       <section id="questionCard"></section>
+      <section id="answerAlert"></section>
+      <section id="finalScorePage">
+        <h2>All done!</h2>
+        <p id="finalScore"></p>
+        <form>
+          <p id="score-input"></p>
+          <label>Enter initials:</label>
+          <input id="initials-input" type="text" name="initials" />
+          <input type="submit" value="Enter" />
+        </form>
+      </section>
     </main>
     <script src="assets/js/script.js"></script>
   </body>
