--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h2>You ready to test that KNOWledge?!</h2>
         <button id="startButton">START</button>
       </section>
+      <div id="timerDiv"></div>
       <section id="questionCardDiv">
         <h3 id="h3Question">Is question 1 is a question with an h3 tag?</h3>
         <ol id="answerList">
@@ -49,15 +50,13 @@
         <form id="finalScoreForm">
           <p id="userFinalScore"></p>
           <label>Enter initials:</label>
-          <input id="initialsInput" type="text" />
-          <input type="submit" id="formSubmissionBtn" />
+          <input id="initialsInput" type="text" required />
+          <input type="submit" id="formSubmissionBtn" onclick="empty()" />
         </form>
       </section>
       <section id="leaderboardDiv">
         <h2>***Leaderboard***</h2>
-        <p id="userInitials">
-          user 1 <span id="userLeaderboardScore">user score</span>
-        </p>
+        <ul id="leaderboardList"></ul>
       </section>
     </main>
     <script src="assets/js/script.js"></script>
