working but still trying to handle edge cases of of a blank form being submitted

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <p id="userFinalScore"></p>
           <label>Enter initials:</label>
           <input id="initialsInput" type="text" required />
-          <input type="submit" id="formSubmissionBtn" onclick="empty()" />
+          <input type="submit" id="formSubmissionBtn" />
         </form>
       </section>
       <section id="leaderboardDiv">
