set some setTimeouts on the answer alerts and added some styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
       <section id="homeScreenDiv">
         <h2>You ready to test that KNOWledge?!</h2>
-        <button id="startButton">START</button>
+        <div id="startButtonDiv"><button id="startButton">START</button></div>
       </section>
       <div id="timerDiv"></div>
       <section id="questionCardDiv">
@@ -42,9 +42,7 @@
           </li>
         </ol>
       </section>
-      <div id="answerAlert">
-        <h4>Correct/Incorrect</h4>
-      </div>
+      <h4 id="answerAlert">Correct/Incorrect</h4>
       <section id="finalScoreDiv">
         <h2>All done!</h2>
         <form id="finalScoreForm">
